--- a/BankingApp/BankingApp/Views/Shared/_Layout.cshtml
+++ b/BankingApp/BankingApp/Views/Shared/_Layout.cshtml
@@ -23,10 +23,14 @@
 							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Transfer</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AccountDetails">Account Details</a>
+                        </li>
+
+						<li class="nav-item">
+							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Transfer</a>
 						</li>
 						<li class="nav-item"; style="margin-left:1150px">
-							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Logout</a>
+							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Logout</a>
 						</li>
 					</ul>
 				</div>
@@ -39,14 +43,14 @@
 		</main>
 	</div>
 
-	<footer class="border-top footer text-muted">
-		<div class="container">
-			&copy; 2023 - BankingApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-		</div>
-	</footer>
-	<script src="~/lib/jquery/dist/jquery.min.js"></script>
-	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-	<script src="~/js/site.js" asp-append-version="true"></script>
-	@await RenderSectionAsync("Scripts", required: false)
+    <footer class="border-top footer text-muted">
+        <div class="container">
+            &copy; 2023 - BankingApp
+        </div>
+    </footer>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
