integrated entity framework

--- a/BankingApp/BankingApp/Views/Shared/_Layout.cshtml
+++ b/BankingApp/BankingApp/Views/Shared/_Layout.cshtml
@@ -22,19 +22,10 @@
 						<li class="nav-item">
 							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
 						</li>
-						<li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AccountDetails">Account Details</a>
-                        </li>
-
-						<li class="nav-item">
-							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Transfer</a>
-						</li>
-						<li class="nav-item"; style="margin-left:1150px">
-							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Logout</a>
-						</li>
 					</ul>
 				</div>
 			</div>
+			<partial name="_LoginPartial"/>
 		</nav>
 	</header>
 	<div class="container">
