--- a/BankingApp/BankingApp/Views/Shared/_Layout.cshtml
+++ b/BankingApp/BankingApp/Views/Shared/_Layout.cshtml
@@ -22,8 +22,22 @@
 						<li class="nav-item">
 							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
 						</li>
-					</ul>
+
+						<li class="nav-item">
+							<a class="nav-link text-dark" asp-area="" asp-action="">Transfer</a>
+						</li>
+						
+						<li class="nav-item">
+							<a class="nav-link text-dark" asp-area="" asp-action="">Cards</a>
+						</li>
+						
+						<li class="nav-item">
+							<a class="nav-link text-dark" asp-area=""asp-action="">Transactions</a>
+						</li>
+
+					</ul> 
 				</div>
+				
 			</div>
 			<partial name="_LoginPartial"/>
 		</nav>
@@ -34,14 +48,14 @@
 		</main>
 	</div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2023 - BankingApp
-        </div>
-    </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+	<footer class="border-top footer text-muted">
+		<div class="container">
+			&copy; 2023 - BankingApp
+		</div>
+	</footer>
+	<script src="~/lib/jquery/dist/jquery.min.js"></script>
+	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="~/js/site.js" asp-append-version="true"></script>
+	@await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
