Implemented cards page

--- a/BankingApp/BankingApp/Views/Shared/_Layout.cshtml
+++ b/BankingApp/BankingApp/Views/Shared/_Layout.cshtml
@@ -24,15 +24,15 @@
 						</li>
 
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-area="" asp-action="">Transfer</a>
+							<a class="nav-link text-dark" asp-page="/Cards">Transfers</a>
 						</li>
 						
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-area="" asp-action="">Cards</a>
+							<a class="nav-link text-dark" asp-area="" asp-page="/Cards">Cards</a>
 						</li>
 						
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-area=""asp-action="">Transactions</a>
+							<a class="nav-link text-dark" asp-page="/Cards">Transactions</a>
 						</li>
 
 					</ul> 
