implemented controllers and views

--- a/BankingApp/Views/Cards/Index.cshtml
+++ b/BankingApp/Views/Cards/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@page
-@model BankingApp.Pages.CardsModel
+﻿@model IEnumerable<BankingApp.Models.Card>
+
 @{
-    ViewData["Title"] = "Cards";
+    ViewData["Title"] = "Index";
 }
 
 <head>
@@ -18,8 +18,6 @@
         }
         /* Set background color and font family */
         body {
-            /*background-color: #22333B;*/
-            background-color: #EAE0D5;
             font-family: 'Open Sans', sans-serif;
         }
 
@@ -113,8 +111,6 @@
                             <p class="card-text">000</p>
                         </div>
                     </div>
-
-                    <button class="btn btn-card">Learn More</button>
                 </div>
             </div>
 
@@ -135,8 +131,6 @@
                             <p class="card-text">000</p>
                         </div>
                     </div>
-
-                    <button class="btn btn-card">Learn More</button>
                 </div>
             </div>
             <div class="col-md-4">
@@ -156,8 +150,6 @@
                             <p class="card-text">000</p>
                         </div>
                     </div>
-
-                    <button class="btn btn-card">Learn More</button>
                 </div>
             </div>
             <div class="col-md-4">
@@ -177,8 +169,6 @@
                             <p class="card-text">000</p>
                         </div>
                     </div>
-
-                    <button class="btn btn-card">Learn More</button>
                 </div>
             </div>
             <div class="col-md-4">
@@ -198,8 +188,6 @@
                             <p class="card-text">000</p>
                         </div>
                     </div>
-
-                    <button class="btn btn-card">Learn More</button>
                 </div>
             </div>
             <div class="col-md-4">
@@ -219,8 +207,6 @@
                             <p class="card-text">000</p>
                         </div>
                     </div>
-
-                    <button class="btn btn-card">Learn More</button>
                 </div>
             </div>
         </div>
