--- a/BankingApp/Views/Shared/_Layout.cshtml
+++ b/BankingApp/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 	<header>
 		<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
 			<div class="container-fluid">
-				<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">BankingApp</a>
+				<a class="navbar-brand" asp-area="" asp-controller="BankAccounts" asp-action="Index">BankingApp</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
 						aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -20,19 +20,15 @@
 				<div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
 					<ul class="navbar-nav flex-grow-1">
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-						</li>
-
-						<li class="nav-item">
-							<a class="nav-link text-dark" asp-page="/Cards">Transfers</a>
+							<a class="nav-link text-dark" asp-controller="" asp-action="">Transfers</a>
 						</li>
 						
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-area="" asp-page="/Cards">Cards</a>
+							<a class="nav-link text-dark" asp-controller="Cards" asp-action="Index">Cards</a>
 						</li>
 						
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-page="/Cards">Transactions</a>
+							<a class="nav-link text-dark" asp-controller="Transactions" asp-action="Index">Transactions</a>
 						</li>
 
 					</ul> 
