implemented "set limit" option in Cards page; also implemented "block card" and "transcations" in Cards page.

--- a/BankingApp/Views/Cards/Index.cshtml
+++ b/BankingApp/Views/Cards/Index.cshtml
@@ -28,9 +28,10 @@
             border-radius: 10px;
             padding: 20px;
             margin-top: 20px;
+            margin-bottom: 60px;
             background-color: #577590;
             box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-            position: realtive;
+            position: relative;
         }
 
         /* Style for card-exp-cvv-box */
@@ -73,27 +74,79 @@
         }
 
 
-        /* Style for card button */
-        .btn-card {
-            background-color: #22333B;
-            border-color: #22333B;
-            color: #ffffff;
-            font-size: 16px;
-            border-radius: 5px;
+        .circle-button1 {
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            border: 2px solid #007bff;
+            font-size: 12px;
+            font-weight: bold;
+            color: #000000;
+            background-color: #007bff;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+            
+            position: absolute;
+            left: 430px;
+            top: 0px;
         }
 
-            /* Style for card button on hover */
-            .btn-card:hover {
-                background-color: #003d85;
-                border-color: #003d85;
-            }
+        .circle-button2 {
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            border: 2px solid #007bff;
+            font-size: 12px;
+            font-weight: bold;
+            color: #000000;
+            background-color: #007bff;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+
+            position: absolute;
+            left: 430px;
+            top: 70px;
+        }
+
+        .circle-button3 {
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            border: 2px solid #007bff;
+            font-size: 12px;
+            font-weight: bold;
+            color: #000000;
+            background-color: #007bff;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+
+            position: absolute;
+            left: 430px;
+            top: 140px;
+        }
+
+        .circle-button1:hover {
+            background-color: #647C90;
+            border: 2px solid #647C90;
+            color: #ffffff;
+        }
+
+        .circle-button2:hover {
+            background-color: #647C90;
+            border: 2px solid #647C90;
+            color: #ffffff;
+        }
+
+        .circle-button3:hover {
+            background-color: #647C90;
+            border: 2px solid #647C90;
+            color: #ffffff;
+        }
+
 
     </style>
 </head>
 
 <body>
     <div class="container">
-        <div class="row">
+        <div class="column">
             <div class="col-md-4">
                 <div class="card-box">
                     <h2 class="card-title">Card 1</h2>
@@ -111,6 +164,10 @@
                             <p class="card-text">000</p>
                         </div>
                     </div>
+
+                    <button class="circle-button1">Block Card</button>
+                    <button class="circle-button2">Set limit</button>
+                    <button class="circle-button3">Trans actions</button>
                 </div>
             </div>
 
@@ -131,6 +188,10 @@
                             <p class="card-text">000</p>
                         </div>
                     </div>
+
+                    <button class="circle-button1">Block Card</button>
+                    <button class="circle-button2">Set limit</button>
+                    <button class="circle-button3">Trans actions</button>
                 </div>
             </div>
             <div class="col-md-4">
@@ -150,6 +211,10 @@
                             <p class="card-text">000</p>
                         </div>
                     </div>
+
+                    <button class="circle-button1">Block Card</button>
+                    <button class="circle-button2">Set limit</button>
+                    <button class="circle-button3">Trans actions</button>
                 </div>
             </div>
             <div class="col-md-4">
@@ -169,6 +234,10 @@
                             <p class="card-text">000</p>
                         </div>
                     </div>
+
+                    <button class="circle-button1">Block Card</button>
+                    <button class="circle-button2">Set limit</button>
+                    <button class="circle-button3">Trans actions</button>
                 </div>
             </div>
             <div class="col-md-4">
@@ -188,6 +257,10 @@
                             <p class="card-text">000</p>
                         </div>
                     </div>
+
+                    <button class="circle-button1">Block Card</button>
+                    <button class="circle-button2">Set limit</button>
+                    <button class="circle-button3">Trans actions</button>
                 </div>
             </div>
             <div class="col-md-4">
@@ -207,6 +280,10 @@
                             <p class="card-text">000</p>
                         </div>
                     </div>
+
+                    <button class="circle-button1">Block Card</button>
+                    <button class="circle-button2">Set limit</button>
+                    <button class="circle-button3">Trans actions</button>
                 </div>
             </div>
         </div>
