--- a/BankingApp/Views/Cards/Delete.cshtml
+++ b/BankingApp/Views/Cards/Delete.cshtml
@@ -23,6 +23,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ExpirationDate)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.IsLocked)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.IsLocked)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
