--- a/BankingApp/Views/Cards/Details.cshtml
+++ b/BankingApp/Views/Cards/Details.cshtml
@@ -22,6 +22,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ExpirationDate)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.IsLocked)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.IsLocked)
+        </dd>
     </dl>
 </div>
 <div>
