--- a/BankingApp/Views/Shared/_Layout.cshtml
+++ b/BankingApp/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
 				<div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
 					<ul class="navbar-nav flex-grow-1">
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-controller="Models" asp-action="">Transfers</a>
+							<a class="nav-link text-dark" asp-controller="Transactions" asp-action="Create">Make a payment</a>
 						</li>
 						
 						<li class="nav-item">
