--- a/BankingApp/Views/Transactions/Create.cshtml
+++ b/BankingApp/Views/Transactions/Create.cshtml
@@ -20,7 +20,7 @@
             {
                 <div class="form-group">
                     <label for="SelectedBankAccountId">Select a Bank Account:</label>
-                    <select id="SelectedBankAccountId" asp-for="Account" class="form-control" asp-items="ViewBag.BankAccounts">
+                    <select id="SelectedBankAccountId" asp-for="AccountName" class="form-control" asp-items="ViewBag.BankAccounts">
                         <option value="">-- Select Bank Account --</option>
                     </select>
                 </div>
