--- a/BankingApp/Views/Transactions/Index.cshtml
+++ b/BankingApp/Views/Transactions/Index.cshtml
@@ -14,6 +14,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.AccountName)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Amount)
             </th>
             <th>
@@ -28,6 +31,10 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
+             <td>
+                @Html.DisplayFor(modelItem => item.AccountName)
+            </td>
+
             <td>
                 @Html.DisplayFor(modelItem => item.Amount)
             </td>
