--- a/BankingApp/Views/Cards/Index.cshtml
+++ b/BankingApp/Views/Cards/Index.cshtml
@@ -20,6 +20,7 @@
         /* Set background color and font family */
         body {
             font-family: 'Open Sans', sans-serif;
+            background-color: #f0f0f0;
         }
 
         /* Style for card-box */
@@ -30,7 +31,8 @@
             padding: 20px;
             margin-top: 20px;
             margin-bottom: 60px;
-            background-color: #577590;
+            /*background-color: #AED6FA;*/
+            background-image: linear-gradient(to bottom right, #0B5ED7, #D315B7);
             box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
             position: relative;
         }
@@ -69,7 +71,7 @@
         /* Style for card content */
         .card-text {
             font-size: 16px;
-            color: #000000;
+            color: #f0f0f0;
             margin-top: 2px;
             margin-bottom: 16px;
         }
@@ -79,11 +81,11 @@
             width: 60px;
             height: 60px;
             border-radius: 50%;
-            border: 2px solid #007bff;
+            border: 2px solid #0d6efd;
             font-size: 12px;
             font-weight: bold;
-            color: #000000;
-            background-color: #007bff;
+            color: #ffffff;
+            background-color: #0d6efd;
             box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
             
             position: absolute;
@@ -95,11 +97,11 @@
             width: 60px;
             height: 60px;
             border-radius: 50%;
-            border: 2px solid #007bff;
+            border: 2px solid #0d6efd;
             font-size: 12px;
             font-weight: bold;
-            color: #000000;
-            background-color: #007bff;
+            color: #ffffff;
+            background-color: #0d6efd;
             box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
 
             position: absolute;
@@ -111,11 +113,11 @@
             width: 60px;
             height: 60px;
             border-radius: 50%;
-            border: 2px solid #007bff;
+            border: 2px solid #0d6efd;
             font-size: 12px;
             font-weight: bold;
-            color: #000000;
-            background-color: #007bff;
+            color: #ffffff;
+            background-color: #0d6efd;
             box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
 
             position: absolute;
@@ -124,21 +126,18 @@
         }
 
         .circle-button1:hover {
-            background-color: #647C90;
-            border: 2px solid #647C90;
-            color: #ffffff;
+            background-color: #0B5ED7;
+            border: 2px solid #0B5ED7;
         }
 
         .circle-button2:hover {
-            background-color: #647C90;
-            border: 2px solid #647C90;
-            color: #ffffff;
+            background-color: #0B5ED7;
+            border: 2px solid #0B5ED7;
         }
 
         .circle-button3:hover {
-            background-color: #647C90;
-            border: 2px solid #647C90;
-            color: #ffffff;
+            background-color: #0B5ED7;
+            border: 2px solid #0B5ED7;
         }
 
 
@@ -146,9 +145,7 @@
 </head>
 
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+
 
 <body>
     <div class="container">
@@ -171,12 +168,19 @@
                         </div>
                     </div>
 
+                <button class="circle-button1">Block Card</button>
+                <button class="circle-button2">Set limit</button>
+                <button class="circle-button3">Trans actions</button>
+
                       @*  <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                         <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                         <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>*@
                 </div>
             }
     </div>
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/js/bootstrap.bundle.min.js" integrity="sha512-nJscfM5IvZ8BW6w5U5c1rhkWP9Ro3z8CzeWAnYJcP+bKr0QOhZbR+OwOroju1+rDZLzv9sgKj8nA45I2NgUPFQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 
