--- a/BankingApp/Views/BankAccounts/Create.cshtml
+++ b/BankingApp/Views/BankAccounts/Create.cshtml
@@ -1,56 +1,60 @@
 ﻿@model BankingApp.Models.BankAccount
 
 @{
-    ViewData["Title"] = "Create";
+	ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1 style="color: #026efd;">Create New Bank Account</h1>
 
-<h4>BankAccount</h4>
+<h4></h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="IBAN" class="control-label"></label>
-                <input asp-for="IBAN" class="form-control" />
-                <span asp-validation-for="IBAN" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="SWIFT" class="control-label"></label>
-                <input asp-for="SWIFT" class="form-control" />
-                <span asp-validation-for="SWIFT" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Balance" class="control-label"></label>
-                <input asp-for="Balance" class="form-control" />
-                <span asp-validation-for="Balance" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Currency" class="control-label"></label>
-                <select id="SelectedBankAccountId" asp-for="Currency" class="form-control" asp-items="ViewBag.Currency">
-                    <option value="">-- Select Currency --</option>
-                </select>
-                <span asp-validation-for="Currency" class="text-danger"></span>
-            </div>
+	<div class="col-md-4">
+		<form asp-action="Create">
+			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+			<div class="form-group">
+				<label asp-for="Name" class="control-label"></label>
+				<input asp-for="Name" class="form-control" />
+				<span asp-validation-for="Name" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="IBAN" class="control-label"></label>
+				<input asp-for="IBAN" class="form-control" />
+				<span asp-validation-for="IBAN" class="text-danger"></span>
+			</div>
+			@*
+				<div class="form-group">
+				<label asp-for="SWIFT" class="control-label"></label>
+				<input asp-for="SWIFT" class="form-control" />
+				<span asp-validation-for="SWIFT" class="text-danger"></span>
+			</div>
+			*@
+			<div class="form-group">
+				<label asp-for="Balance" class="control-label"></label>
+				<input asp-for="Balance" class="form-control" />
+				<span asp-validation-for="Balance" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="Currency" class="control-label"></label>
+				<select id="SelectedBankAccountId" asp-for="Currency" class="form-control" asp-items="ViewBag.Currency">
+					<option value="">-- Select Currency --</option>
+				</select>
+				<span asp-validation-for="Currency" class="text-danger"></span>
+			</div>
 
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
+			<div class="form-group" style="margin-top: 15px;">
+				<input type="submit" value="Create" class="btn btn-primary" />
+			</div>
+		</form>
+	</div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+<div class="form-group" style="margin-top: 15px;">
+	<a asp-action="Index" class="btn btn-secondary">
+		<i class="fas fa-arrow-left"></i> Back to Bank Accounts List
+	</a>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+	@{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
