--- a/BankingApp/Views/BankAccounts/Index.cshtml
+++ b/BankingApp/Views/BankAccounts/Index.cshtml
@@ -58,7 +58,7 @@
 				<p class="btn btn-primary">
 					<a asp-action="Details" asp-route-id="@item.Id" class="text-white">Details</a> 
 				</p>
-				<p class="btn btn-primary">
+				<p class="btn btn-danger">
 						<a asp-action="Delete" asp-route-id="@item.Id" class="text-white">Delete</a>
 				</p>
 				
