--- a/BankingApp/Views/BankAccounts/Create.cshtml
+++ b/BankingApp/Views/BankAccounts/Create.cshtml
@@ -50,9 +50,7 @@
 </div>
 
 <div class="form-group" style="margin-top: 15px;">
-	<a asp-action="Index" class="btn btn-secondary">
-		<i class="fas fa-arrow-left"></i> Back to Bank Accounts List
-	</a>
+	<a asp-action="Index" class="btn btn-secondary">Back to Bank Accounts List</a>
 </div>
 
 @section Scripts {
