--- a/BankingApp/Views/BankAccounts/Delete.cshtml
+++ b/BankingApp/Views/BankAccounts/Delete.cshtml
@@ -1,45 +1,44 @@
 ﻿@model BankingApp.Models.BankAccount
 
 @{
-    ViewData["Title"] = "Delete";
+	ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1 style="color: #026efd;">Delete your Bank Account</h1>
+<hr />
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this bank account?</h3>
 <div>
-    <h4>BankAccount</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IBAN)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IBAN)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SWIFT)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SWIFT)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Balance)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Balance)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Currency)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Currency)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+	<dl class="row">
+		<dt class = "col-sm-2">
+			@Html.DisplayNameFor(model => model.IBAN)
+		</dt>
+		<dd class = "col-sm-10">
+			@Html.DisplayFor(model => model.IBAN)
+		</dd>
+		<dt class = "col-sm-2">
+			@Html.DisplayNameFor(model => model.SWIFT)
+		</dt>
+		<dd class = "col-sm-10">
+			@Html.DisplayFor(model => model.SWIFT)
+		</dd>
+		<dt class = "col-sm-2">
+			@Html.DisplayNameFor(model => model.Balance)
+		</dt>
+		<dd class = "col-sm-10">
+			@Html.DisplayFor(model => model.Balance)
+		</dd>
+		<dt class = "col-sm-2">
+			@Html.DisplayNameFor(model => model.Currency)
+		</dt>
+		<dd class = "col-sm-10">
+			@Html.DisplayFor(model => model.Currency)
+		</dd>
+	</dl>
+	
+	<form asp-action="Delete">
+		<input type="hidden" asp-for="Id" />
+		<input type="submit" value="Delete" class="btn btn-danger" /> |
+		<a asp-action="Index" class="btn btn-secondary">Back to Bank Accounts List</a>
+	</form>
 </div>
