--- a/BankingApp/Views/Cards/Index.cshtml
+++ b/BankingApp/Views/Cards/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<head>
+<div>
     <meta charset="UTF-8">
     <title>Card Boxes Example</title>
     <!-- Bootstrap CSS -->
@@ -16,11 +16,6 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-        }
-        /* Set background color and font family */
-        body {
-            font-family: 'Open Sans', sans-serif;
-            background-color: #f0f0f0;
         }
 
         /* Style for card-box */
@@ -56,6 +51,7 @@
         .card-title {
             font-size: 24px;
             font-weight: bold;
+            color: #ffffff;
             margin-top: 5px;
             margin-bottom: 20px;
         }
@@ -63,7 +59,7 @@
         /* Style for card content */
         .card-heading-text {
             font-size: 12px;
-            color: #000000;
+            color: #ffffff;
             margin-top: 16px;
             margin-bottom: 2px;
         }
@@ -119,6 +115,9 @@
             color: #ffffff;
             background-color: #0d6efd;
             box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+            text-align: center;
+            /*padding: 10px 0;*/
+            vertical-align: middle;
 
             position: absolute;
             left: 430px;
@@ -142,12 +141,18 @@
 
 
     </style>
-</head>
+</div>
 
+<div>
+    <div class="text-center">
+        <h1 style="color: #026efd;">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-credit-card-2-back-fill" viewBox="0 0 16 16">
+                <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v5H0V4zm11.5 1a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h2a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-2zM0 11v1a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-1H0z" />
+            </svg> My Cards
+        </h1>
+    </div>
+    <hr />
 
-
-
-<body>
     <div class="container">
             @foreach (var item in Model)
             {
@@ -160,7 +165,8 @@
                     <div class="card-exp-cvv-box">
                         <div class="expiry">
                             <p class="card-heading-text">Expiry date</p>
-                                <p class="card-text">@Html.DisplayFor(modelItem => item.ExpirationDate)</p>
+                        <p class="card-text">@Html.Raw(item.ExpirationDate.ToString("MM\\/yy"))</p>
+                        @*<p class="card-text">@item.ExpirationDate.ToString("MM\\/yy")</p>*@
                         </div>
                         <div class="cvv">
                             <p class="card-heading-text">CVV</p>
@@ -170,7 +176,8 @@
 
                 <button class="circle-button1">Block Card</button>
                 <button class="circle-button2">Set limit</button>
-                <button class="circle-button3">Trans actions</button>
+                @*<button class="circle-button3">Trans actions</button>*@
+                <a class="circle-button3" asp-controller="Transactions" asp-action="Index">Trans actions</a>
 
                       @*  <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                         <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
@@ -178,11 +185,11 @@
                 </div>
             }
     </div>
-    <p>
-        <a asp-action="Create">Create New</a>
+    <p class="btn btn-primary">
+        <a asp-action="Create" class="text-white">Create New Card</a>
     </p>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/js/bootstrap.bundle.min.js" integrity="sha512-nJscfM5IvZ8BW6w5U5c1rhkWP9Ro3z8CzeWAnYJcP+bKr0QOhZbR+OwOroju1+rDZLzv9sgKj8nA45I2NgUPFQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-</body>
+    @*<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/js/bootstrap.bundle.min.js" integrity="sha512-nJscfM5IvZ8BW6w5U5c1rhkWP9Ro3z8CzeWAnYJcP+bKr0QOhZbR+OwOroju1+rDZLzv9sgKj8nA45I2NgUPFQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>*@
+</div>
 
 
 
